vectorized functions & saved dask dataframe as parquet

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 census_outputs/
+notebook/
 state_codes/census_state_codes_cut.csv
-eda_notebook/census_api.ipynb
 state_codes/census_state_codes_cut.csv
 
 # Byte-compiled / optimized / DLL files
